css/ben-lee-properties.webflow.css
/* ... */
.nav-contact-popup {
  border-bottom: 1px solid var(--light-grey);
  border-left: 1px solid var(--light-grey);
  background-color: var(--white);
  margin-top: 5em;
  padding: 3em;
  display: none;
  position: absolute;
  inset: 0% 0% auto auto;
}

.nav-contact-popup.is-2nd {
  z-index: 1;
  border: 1px solid var(--light-grey);
  margin-top: -.1em;
  margin-right: -.1em;
}

.popup-contact-link {
  font-size: 1.5em;
}

.popup-contact-link:hover {
  color: var(--midnight-blue-3);
}

.popup-contact-title {
  color: #13355fa3;
  letter-spacing: .05em;
  text-transform: uppercase;
  max-width: 25em;
  margin-bottom: .3em;
  font-size: .9em;
  line-height: 1.6em;
}

.popup-contact-paragraph {
  max-width: 9.9em;
  margin-bottom: 1.7em;
}

.popup-contact-block {
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  margin-bottom: 2em;
  display: flex;
}

.popup-contact-block.is-last {
  margin-bottom: 0;
}

.style-guide-color {
  background-color: var(--light-grey);
  border-radius: 50%;
  width: 5em;
  height: 5em;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-right: 2.8em;
}

.style-guide-color.is-2nd {
  background-color: var(--midnight-blue);
}

.style-guide-color.is-3rd {
  background-color: var(--midnight-blue-2);
}

.style-guide-color.is-4th {
  background-color: var(--midnight-blue-3);
}

.style-guide-color.is-5th {
  background-color: var(--chocolate);
}

.style-guide-color.is-6th {
  background-color: var(--peru);
}

.style-guide-color.is-7th {
  background-color: var(--dark-green);
}

.style-guide-color.is-8th {
  background-color: var(--maroon);
}

.style-guide-colors {
  flex-wrap: wrap;
  justify-content: flex-start;
  align-self: stretch;
  display: flex;
}

.heading-sellers {
  color: var(--white);
  text-align: center;
  font-size: 3em;
  font-weight: 300;
}

.heading-sellers-process {
  text-align: center;
  max-width: 10em;
  margin-bottom: 1.5em;
  margin-left: auto;
  margin-right: auto;
  font-size: 4em;
  font-weight: 300;
  line-height: 1.1em;
}

.in-nutshell-item-temp {
  align-self: stretch;
  width: 45%;
  padding-top: 1.3em;
  padding-bottom: 1.3em;
  overflow: hidden;
}

.page-hero-2 {
  z-index: 10;
  flex-direction: column;
  align-items: flex-start;
  width: 100%;
  max-width: 1800px;
  margin-left: auto;
  margin-right: auto;
  padding: 7.5em 8em 25em;
  display: flex;
  position: relative;
}

.page-hero-2._2 {
  padding-top: 2em;
  padding-bottom: 2em;
}

.hero-2-bottom-bg {
  z-index: 5;
  background-color: #eff0f1;
  border-top-right-radius: .5em;
  width: 74%;
  height: 18em;
  margin-bottom: -1px;
  position: absolute;
  inset: auto auto 0% 0%;
}

.tabs-menu-2 {
  justify-content: flex-start;
  align-items: center;
  margin-bottom: 3.5em;
  display: flex;
  overflow: auto;
}

.tabs-2 {
  flex-direction: column;
  width: 100%;
}

.tab-link-2 {
  opacity: .7;
  color: #0a223fe6;
  white-space: nowrap;
  background-color: #0000;
  border: 2px solid #0000;
  border-radius: 3em;
  flex: none;
  align-items: center;
  margin-right: 1em;
  padding: 1.2em 2.4em;
  transition: opacity .3s, background-color .3s, border-color .3s;
  display: flex;
}

.tab-link-2:hover {
  border-color: var(--white);
  opacity: 1;
}

.tab-link-2.w--current {
  background-color: var(--white);
  opacity: 1;
  color: var(--midnight-blue);
}

.tab-title-2 {
  letter-spacing: -.02em;
  font-size: 1.1em;
  font-weight: 500;
}

.tab-icon-2 {
  width: 1em;
  height: 1em;
  margin-right: .6em;
  font-size: 1.3em;
}

.padding-listing-2 {
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  margin-top: 0;
  padding-top: 3em;
  padding-bottom: 8em;
  display: flex;
}

.tab-pane-2 {
  width: 100%;
}

.listing-paragraph-2 {
  max-width: 38em;
  margin-bottom: 6em;
  font-size: 1.2em;
  font-weight: 500;
  line-height: 2.1em;
}

.tab-heading {
  margin-bottom: .9em;
  font-size: 2.1em;
  font-weight: 500;
  line-height: 1.2em;
}

.opacity-70 {
  opacity: .7;
}

.footer-made-links {
  justify-content: flex-end;
  align-items: center;
  display: flex;
}

.tooltip {
  z-index: 20;
  background-color: var(--midnight-blue-3);
  color: var(--white);
  letter-spacing: .1em;
  text-transform: uppercase;
  white-space: nowrap;
  padding: .4em .9em;
  font-size: .75em;
  font-weight: 400;
  display: none;
  position: absolute;
  top: 2.4em;
}

.featured-padding-2 {
  width: 100%;
  padding: 4em;
}

.featured-wrapper-2 {
  background-color: var(--midnight-blue);
  width: 100%;
  display: flex;
  overflow: hidden;
}

.featured-block-2 {
  justify-content: flex-end;
  width: 100%;
  display: flex;
}

.featured-gallery-2 {
  z-index: 10;
  background-color: var(--midnight-blue-2);
  border-left: 1px solid #30609b;
  border-top-right-radius: .5em;
  border-bottom-right-radius: .5em;
  align-self: stretch;
  padding: .7em 1em;
  display: flex;
  position: relative;
}

.featured-gallery-list-2 {
  flex-direction: column;
  grid-template-rows: auto auto;
  grid-template-columns: 1fr;
  grid-auto-columns: 1fr;
  justify-content: space-between;
  align-self: stretch;
  align-items: stretch;
  display: flex;
}

.featured-gallery-item-2 {
  flex-direction: column;
  flex: 1;
  justify-content: space-between;
  align-items: stretch;
  width: 12em;
  height: 5em;
  margin-top: .4em;
  margin-bottom: .4em;
  display: flex;
}

.gallery-lightbox-2 {
  z-index: 5;
  flex: 1;
  align-self: stretch;
  width: 100%;
  height: 100%;
  position: relative;
  overflow: hidden;
}

.featured-list-2 {
  flex: 1;
  align-self: stretch;
  display: flex;
}

.featured-item-2 {
  flex-direction: column;
  flex: 1;
  justify-content: space-between;
  align-self: stretch;
  align-items: flex-start;
  display: flex;
  position: relative;
}

.featured-property-gradient {
  z-index: 5;
  background-image: linear-gradient(to right, #0a223f00, #061324b3);
  width: 50%;
  position: absolute;
  inset: 0% 0% 0% auto;
}
/* ... */

